# ScienceTools

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog  README.md  SConstruct  externals.scons  packageList.txt  testList.yaml
.github/workflows/: .ci.yml.swp  .publish_conda.yml.swp  build-conda-pkg.yml  build-pkg-conda.yml  build_conda.yaml  ci.yml  ci.yml.original  ci.yml.verify  cleanup_runs.yml  delete_conda_pkgs_on_failure.yml  delete_gha_cache_weekly.yml  generate-matrix.yml  generate-setup.yml  main-ci.yml  notify-slack.yml  publish_conda.yml  python-test.yml  run_all_tests_under_fermipy.yml  run_tests_only.yml  s3df_conda.yml  test_slack_notification.yml  test_slack_notification.yml.dontrun  testing-conda-fermipy-all.yml  testing-conda-fermipy.yml  testing-conda-st-unit.yml
cmake/: FindCppUnit.cmake  FindF2C.cmake  FindWCSlib.cmake  Findcfitsio.cmake  Findhealpix_cxx.cmake  LICENSE.externals  config.h.in  cross-linux.cmake  cross-osx.cmake  linux-toolchain.cmake  macos-toolchain.cmake  toolchain-homebrew-llvm.cmake
containerSettings/: SConscript  externals.scons  package.scons
containerSettings/doc/: release.notes
docs/: Doxyfile
environments/: README.md  fermitools-build-linux-arm.yml  fermitools-build-linux-x86.yml  fermitools-build-osx-arm.yml  fermitools-build-osx-x86.yml  fermitools-build-run-test.yml  fermitools-build.yml  fermitools-cleanup.yml  fermitools-develop-linux.yml  fermitools-develop-osx-arm.yml  fermitools-develop-osx-arm64.yml  fermitools-develop-osx-arm64.yml.full  fermitools-develop-osx-x86.yml  fermitools-develop-osx.yml  fermitools-fermipy.yml  fermitools-testing.yml
python/: templateCreatorList.txt  update_template_creator.py
python/tests/: creator_sample.tpl  test_cli_versions.py  test_update_template_creator.py
recipe/: activate.csh  activate.sh  build.sh  increment_build_number.sh  increment_fermi_version.sh  meta.yaml  version_lessthan.sh
recipe/tests/: ST-AGN-thread-test  ST-unit-test
recipe/tests/data/inputs/: 3C279_simple_model.xml  L25110610395696BB9F6356_PH00.fits  L25110610395696BB9F6356_SC00.fits
recipe/tests/data/outref/: 3C279-cmap-outref.fits  3C279-counts_spectra-outref.fits  3C279-expmap-outref.fits  3C279-photons-outref.fits
recipe/utils/: pyInterface-updater.py  pyInterface-updater_README  pylike-compatibility.py  pylike-compatibility_README
scripts/: activate.sh  clhep_usage.py
src/general_util/: CMakeLists.txt
src/general_util/general_util/: generic_utils.h
src/general_util/src/: generic_utils.cxx
src/general_util/src/test/: GenericUtilsTest.cxx  GenericUtilsTest.h
